--- a/MapTool/MapTool.csproj
+++ b/MapTool/MapTool.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Area.cs" />
     <Compile Include="CompareHelper.cs" />
+    <Compile Include="CoordinateHelper.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
