--- a/MapTool/MapTool.csproj
+++ b/MapTool/MapTool.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Area.cs" />
+    <Compile Include="Map.cs" />
     <Compile Include="CompareHelper.cs" />
     <Compile Include="CoordinateHelper.cs" />
     <Compile Include="Form1.cs">
@@ -56,6 +56,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Grid.cs" />
+    <Compile Include="StaticArrayProperty.cs" />
     <Compile Include="MapPainter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
