Abstracted the editing tool into a new abstract class with a single descendant, EditTool / ExtendRoomEditTool.

--- a/MapTool/MapTool.csproj
+++ b/MapTool/MapTool.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EditTool.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="CompareHelper.cs" />
     <Compile Include="CoordinateHelper.cs" />
