--- a/MapTool/MapTool.csproj
+++ b/MapTool/MapTool.csproj
@@ -50,11 +50,11 @@
     <Compile Include="Map.cs" />
     <Compile Include="CompareHelper.cs" />
     <Compile Include="CoordinateHelper.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="MapEditForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MapEditForm.Designer.cs">
+      <DependentUpon>MapEditForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Grid.cs" />
     <Compile Include="StaticArrayProperty.cs" />
@@ -63,8 +63,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room.cs" />
     <Compile Include="Wall.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MapEditForm.resx">
+      <DependentUpon>MapEditForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
