--- a/MapTool/MapTool.csproj
+++ b/MapTool/MapTool.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room.cs" />
+    <Compile Include="LockHandler.cs" />
     <Compile Include="Wall.cs" />
     <EmbeddedResource Include="MapEditForm.resx">
       <DependentUpon>MapEditForm.cs</DependentUpon>
