--- a/MapTool/MapTool.csproj
+++ b/MapTool/MapTool.csproj
@@ -46,26 +46,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MapBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="MapBox.Designer.cs">
+      <DependentUpon>MapBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="EditTool.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="CompareHelper.cs" />
     <Compile Include="CoordinateHelper.cs" />
-    <Compile Include="MapEditForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MapEditForm.Designer.cs">
-      <DependentUpon>MapEditForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Grid.cs" />
+    <Compile Include="ScrollPanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ScrollPanel.Designer.cs">
+      <DependentUpon>ScrollPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="StaticArrayProperty.cs" />
-    <Compile Include="MapPainter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room.cs" />
     <Compile Include="LockHandler.cs" />
     <Compile Include="Wall.cs" />
-    <EmbeddedResource Include="MapEditForm.resx">
-      <DependentUpon>MapEditForm.cs</DependentUpon>
+    <EmbeddedResource Include="MapBox.resx">
+      <DependentUpon>MapBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -76,6 +81,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ScrollPanel.resx">
+      <DependentUpon>ScrollPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
